@@ -1,0 +1,43 @@
+/*
+ * Copyright 2010 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */package org.powermock.api.mockito.internal.expectation;
+
+import java.lang.reflect.Method;
+
+import org.powermock.api.mockito.expectation.PrivatelyExpectedArguments;
+
+public class DefaultPrivatelyExpectedArguments implements PrivatelyExpectedArguments {
+
+	private final Method method;
+	private final Object mock;
+
+	public DefaultPrivatelyExpectedArguments(Object mock, Method method) {
+		this.mock = mock;
+		this.method = method;
+		method.setAccessible(true);
+	}
+
+	public <T> void withArguments(Object firstArgument, Object... additionalArguments) throws Exception {
+		if (additionalArguments == null || additionalArguments.length == 0) {
+			method.invoke(mock, firstArgument);
+		} else {
+			method.invoke(mock, firstArgument, additionalArguments);
+		}
+	}
+
+	public <T> void withNoArguments() throws Exception {
+		method.invoke(mock);
+	}
+}
