@@ -16,6 +16,7 @@
 package samples.powermockito.junit4.partialmocking;
 
 import static org.junit.Assert.assertEquals;
+import static org.powermock.api.mockito.PowerMockito.doReturn;
 import static org.powermock.api.mockito.PowerMockito.spy;
 import static org.powermock.api.mockito.PowerMockito.verifyPrivate;
 import static org.powermock.api.mockito.PowerMockito.when;
@@ -38,29 +39,55 @@ import samples.partialmocking.PrivatePartialMockingExample;
 @PrepareForTest(PrivatePartialMockingExample.class)
 public class PrivatePartialMockingExampleTest {
 
-    @Test
-    public void spyingOnPrivateMethodsWorks() throws Exception {
-        final String expected = "TEST VALUE";
-        PrivatePartialMockingExample underTest = spy(new PrivatePartialMockingExample());
-        final String nameOfMethodToMock = "methodToMock";
-        final String input = "input";
-        when(underTest, nameOfMethodToMock, input).thenReturn(expected);
+	@Test
+	public void spyingOnPrivateMethodsWorks() throws Exception {
+		final String expected = "TEST VALUE";
+		PrivatePartialMockingExample underTest = spy(new PrivatePartialMockingExample());
+		final String nameOfMethodToMock = "methodToMock";
+		final String input = "input";
+		when(underTest, nameOfMethodToMock, input).thenReturn(expected);
 
-        assertEquals(expected, underTest.methodToTest());
+		assertEquals(expected, underTest.methodToTest());
 
-        verifyPrivate(underTest).invoke(nameOfMethodToMock, input);
-    }
+		verifyPrivate(underTest).invoke(nameOfMethodToMock, input);
+	}
 
-    @Test
-    public void spyingOnPrivateMethodsWorksWithoutSpecifyingMethodName() throws Exception {
-        final String expected = "TEST VALUE";
-        PrivatePartialMockingExample underTest = spy(new PrivatePartialMockingExample());
-        final String input = "input";
-        final Method methodToMock = method(PrivatePartialMockingExample.class, String.class);
-        when(underTest, methodToMock).withArguments(input).thenReturn(expected);
+	@Test
+	public void partialMockingOfPrivateMethodsWorks() throws Exception {
+		final String expected = "TEST VALUE";
+		PrivatePartialMockingExample underTest = spy(new PrivatePartialMockingExample());
+		final String nameOfMethodToMock = "methodToMock";
+		final String input = "input";
+		doReturn(expected).when(underTest, nameOfMethodToMock, input);
 
-        assertEquals(expected, underTest.methodToTest());
+		assertEquals(expected, underTest.methodToTest());
 
-        verifyPrivate(underTest).invoke(methodToMock).withArguments(input);
-    }
+		verifyPrivate(underTest).invoke(nameOfMethodToMock, input);
+	}
+
+	@Test
+	public void spyingOnPrivateMethodsWorksWithoutSpecifyingMethodName() throws Exception {
+		final String expected = "TEST VALUE";
+		PrivatePartialMockingExample underTest = spy(new PrivatePartialMockingExample());
+		final String input = "input";
+		final Method methodToMock = method(PrivatePartialMockingExample.class, String.class);
+		when(underTest, methodToMock).withArguments(input).thenReturn(expected);
+
+		assertEquals(expected, underTest.methodToTest());
+
+		verifyPrivate(underTest).invoke(methodToMock).withArguments(input);
+	}
+
+	@Test
+	public void partialMockingOfPrivateMethodsWorksWithoutSpecifyingMethodName() throws Exception {
+		final String expected = "TEST VALUE";
+		PrivatePartialMockingExample underTest = spy(new PrivatePartialMockingExample());
+		final String input = "input";
+		final Method methodToMock = method(PrivatePartialMockingExample.class, String.class);
+		doReturn(expected).when(underTest, methodToMock).withArguments(input);
+
+		assertEquals(expected, underTest.methodToTest());
+
+		verifyPrivate(underTest).invoke(methodToMock).withArguments(input);
+	}
 }
